--- a/my-first-page/styles/common.css
+++ b/my-first-page/styles/common.css
@@ -14,6 +14,6 @@ body{
     /*font-family: '궁서', '궁서체', 'GungSeo', cursive ;*/
 }
 a{
-    color: #000;
+    color: inherit;
     text-decoration: none;
 }
