--- a/my-first-page/styles/main.css
+++ b/my-first-page/styles/main.css
@@ -77,12 +77,6 @@ header .gnb ul li:hover{
     color: #fff;
 }
 
-/* main */
-main{
-    background-color: #000;
-}
-
-/* main */
 /* section visual style */
 section.visual{
     background-image: url('https://img.famtimes.co.kr/resources/2019/12/03/fdcn9rawiWqtAYGN.jpg');
@@ -113,4 +107,249 @@ section.visual .txt h3 {
     font-size: 64px;
     font-weight: 700;
     line-height: 1.3;
+}
+
+/* main */
+/* main-text */
+main{
+    background-color: #1b1b1b;
+    color: #fff;
+    padding: 120px 0;
+}
+main .main-text{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+main .main-text h3{
+    display: inline-block;
+    font-size: 24px;
+    flex: 1;
+    font-weight: 700;
+    position: relative;
+}
+/*
+소스코드에는(HTML)작성되지 았는 가상의 자식요소
+before: 가상의 첫째자식
+after: 가상의 막내자식
+필수속성
+content: '';
+display 속성이 필요함
+*/
+main .main-text h3::before{
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background-color: #ffec03;
+    border-radius: 50%;
+    margin-top: 50px;
+    position: absolute;
+    top: 45px;
+    left: 80px;
+}
+main .main-text h3::after{
+    content: '”';
+    display: block;
+    color: #fff;
+    font-size: 280px;
+    position: absolute;
+    top: 45px;
+    left: 0;
+}
+main .main-text p{
+    display: inline-block;
+    flex: 2;
+    font-size: 25px;
+    line-height: 1.4;
+    word-break: break-word;
+}
+main .main-text p span{
+    display: block;
+    font-size: 22px;
+    color: #999;
+    font-weight: 500;
+    margin-top: 30px;
+}
+
+/* main */
+/* main-project */
+main .project{
+    margin-top: 200px;
+    margin-bottom: 60px;
+}
+main .project .top{
+    width: 80%;
+    margin: 0 auto 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+main .project .top h3{
+    font-size: 38px;
+    font-weight: 700;
+}
+main .project .top a{
+
+}
+main .project{
+    padding: 0 30px;
+}
+main .project .bottom{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+main .project .bottom li{
+    flex: 1 1 auto;
+    position: relative;
+    border: 2px solid #fff;
+}
+main .project .bottom li a img{
+    width: 100%;
+    height: 400px;
+}
+main .project .bottom li a::after{
+    content: '';
+    display: block;
+    width: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute; /*-> 앱솔루트를 걸면 display: block이 자동으로 걸림*/
+    top: 0;
+    left: 0;
+    transition: 0.6s;
+}
+main .project .bottom li .name{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: #000;
+    padding: 5px;
+    opacity: 0;
+    z-index: 1;
+}
+main .project .bottom li a:hover::after{
+    width: 100%;
+}
+main .project .bottom li a:hover .name{
+    animation: show-name 1s both;
+}
+@keyframes show-name {
+    from {
+        opacity: 0;
+        bottom: -30px;
+    }
+    to {
+        opacity: 1;
+        bottom: 10px;
+    }
+}
+
+/* main */
+/* main-partners */
+main .partners{
+    width: 80%;
+    margin: 0 auto 100px;
+}
+main .partners h3{
+    font-size: 19px;
+    margin-bottom: 30px;
+}
+main .partners ul{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 60px 0;
+}
+main .partners ul li{
+    width: 25%;
+    align-self: center;
+    text-align: center;
+}
+main .partners ul li img{
+    opacity: 0.3;
+    transition: .3s;
+}
+main .partners ul li img:hover{
+    opacity: 1;
+}
+
+/* main */
+/* main-contact */
+main .contact{
+    width: 90%;
+    background-image: url("../img/contact.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding: 200px 0;
+}
+main .contact .inner{
+    width: 80%;
+    margin: 0 auto;
+    font-size: 19px;
+    line-height: 1.4;
+}
+main .contact .inner .tel{
+    font-size: 58px;
+    font-weight: 700;
+    margin: 50px 0;
+}
+
+/* footer */
+footer {
+    background: #1b1b1b;
+    color: #999;
+    padding: 0 80px 80px;
+}
+footer ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+footer ul li:nth-child(2) {
+    color: #eee;
+    font-size: 16px;
+    line-height: 2;
+}
+footer ul li:nth-child(2) span {
+    font-weight: 700;
+    margin-right: 10px;
+    color: #999;
+}
+
+#go-top{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    color: #fff;
+    font-size: 50px;
+}
+
+/* 큰 태블릿 반영형 디자인 */
+/* 1025px 미만*/
+@media screen and (max-width: 1024px) {
+    header .gnb{
+        width: 100%;
+    }
+    header .gnb ul{
+        text-align: center;
+    }
+    header .gnb
+    section.visual{
+        height: 60vh;
+    }
+    section.viaul rexrP
+    back
+
+}
+@media screen and (max-width: 768px) {
+
+}
+@media screen and (max-width: 360px) {
+
 }
