html, css 실습1 - main.css 수정

--- a/css-study/final-practice/1-google/css/main.css
+++ b/css-study/final-practice/1-google/css/main.css
@@ -13,6 +13,11 @@ input{
     color: #3c4043;
     border-radius: 6px;
     cursor: pointer;
+    border: 1px solid #f8f9fa;
+}
+.btn:hover{
+    border-color: #eee;
+    box-shadow: 1px 3px 10px #eee;
 }
 body{
     height: 100vh;
